# rust-play

./: Cargo.toml  README.md
src/: audio.rs  files.rs  lib.rs  main.rs  output.txt
src/audio/: Playing.rs  Song.rs  mod.rs  song.rs
src/files/: get_files.rs  mod.rs
src/terminalui/: ui.rs
