[package]
name = "rust_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.16.0", features = ["symphonia-all"] }
glob = "0.3.0"
walkdir = "2"
dirs = "4.0.0"
audiotags = "0.4.1"
tui = "0.19"
crossterm = "0.25"